test-cases/final-dump/unbound_after_for.exp
Error detected during type checking of module(s) unbound_after_for
[91mfinal-dump/unbound_after_for.wybe:2:2: Uninitialised argument in call to println, argument 1
[0m
